[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/EnemySpawningSystem.gd" type="Script" id=1]

[node name="EnemySpawningSystem" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="InitialDelayTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="InitialDelayTimer" to="." method="_on_InitialDelayTimer_timeout"]
